--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/pwa-192x192.png" type="image/png" />  
+  <link rel="icon" href="/favicon.ico"  sizes="48x48" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180" />
+  <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  <meta name="theme-color" content="#ffffff">
+
+  <script src="/registerSW.js"></script>
+  <title>LMS Applicaiton</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
